# WeDetect

./: .gitignore  README.md  README_zh.md  checkpoints  dist_train.sh  generate_class_embedding.py  infer_wedetect.py  main.py  pyproject.toml  train.py
config/: wedetect_base_coco_full_tuning_8xbs4_2e-5.py  wedetect_base_coco_full_tuning_8xbs4_2e-5_mask_refine.py  wedetect_base_coco_vision_encoder_8xbs4_2e-5.py  wedetect_large.py
data/: ArTaxOr  FISH  clipart1k
data/texts/: artaxor_class_texts.json  artaxor_zh_class_texts.json  clipart1k_class_texts.json  clipart1k_zh_class_texts.json  extract_class.py  fish_class_texts.json  fish_zh_class_texts.json  uodd_class_texts.json  uodd_zh_class_texts.json
wedetect/datasets/: mm_dataset.py  wecoco.py
wedetect/datasets/transformers/: __init__.py  mix_img_transforms.py  transforms.py
wedetect/engine/: __init__.py
wedetect/engine/hooks/: __init__.py  yolov5_param_scheduler_hook.py
wedetect_ref/: README.md
work_dirs/wedetect_large/artaxor_init/: 20260205_054855.json
work_dirs/wedetect_large/artaxor_init/vis_data/: config.py
work_dirs/wedetect_large/clipart1k_init/: 20260205_053330.json
work_dirs/wedetect_large/clipart1k_init/vis_data/: config.py
work_dirs/wedetect_large/fish_init/: 20260205_061006.json
work_dirs/wedetect_large/fish_init/vis_data/: config.py
